@@ -12,13 +12,12 @@ import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.plugins.Plugin;
 
-import java.util.Collections;
 import java.util.Map;
 
 public class IngestAttachmentPlugin extends Plugin implements IngestPlugin {
 
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        return Collections.singletonMap(AttachmentProcessor.TYPE, new AttachmentProcessor.Factory());
+        return Map.of(AttachmentProcessor.TYPE, new AttachmentProcessor.Factory());
     }
 }
