@@ -10,7 +10,6 @@ package org.elasticsearch.plugins;
 
 import org.elasticsearch.ingest.Processor;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -26,6 +25,6 @@ public interface IngestPlugin {
      * to create the processor from a given pipeline configuration.
      */
     default Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        return Collections.emptyMap();
+        return Map.of();
     }
 }
