@@ -12,15 +12,21 @@ import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.index.IndexReader;
+import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.search.IndexSearcher;
 import org.apache.lucene.search.Query;
 import org.apache.lucene.search.ScoreDoc;
+import org.apache.lucene.search.ScoreMode;
+import org.apache.lucene.search.Scorer;
 import org.apache.lucene.search.TopDocs;
 import org.apache.lucene.search.TotalHits;
+import org.apache.lucene.search.Weight;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.tests.index.RandomIndexWriter;
+import org.elasticsearch.index.query.InnerHitsRewriteContext;
 import org.elasticsearch.index.query.MatchNoneQueryBuilder;
 import org.elasticsearch.index.query.QueryBuilder;
+import org.elasticsearch.index.query.QueryRewriteContext;
 import org.elasticsearch.index.query.SearchExecutionContext;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.test.AbstractQueryTestCase;
@@ -33,11 +39,19 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 
+import static org.apache.lucene.search.DocIdSetIterator.NO_MORE_DOCS;
+import static org.elasticsearch.search.vectors.KnnSearchBuilderTests.randomVector;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.nullValue;
+
 public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScoreDocQueryBuilder> {
 
     @Override
     protected Collection<Class<? extends Plugin>> getPlugins() {
-        return Arrays.asList(TestGeoShapeFieldMapperPlugin.class);
+        return List.of(TestGeoShapeFieldMapperPlugin.class);
     }
 
     @Override
@@ -47,12 +61,20 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
         for (int doc = 0; doc < numDocs; doc++) {
             scoreDocs.add(new ScoreDoc(doc, randomFloat()));
         }
-        return new KnnScoreDocQueryBuilder(scoreDocs.toArray(new ScoreDoc[0]));
+        return new KnnScoreDocQueryBuilder(
+            scoreDocs.toArray(new ScoreDoc[0]),
+            randomBoolean() ? "field" : null,
+            randomBoolean() ? randomVector(10) : null
+        );
     }
 
     @Override
     public void testValidOutput() {
-        KnnScoreDocQueryBuilder query = new KnnScoreDocQueryBuilder(new ScoreDoc[] { new ScoreDoc(0, 4.25f), new ScoreDoc(5, 1.6f) });
+        KnnScoreDocQueryBuilder query = new KnnScoreDocQueryBuilder(
+            new ScoreDoc[] { new ScoreDoc(0, 4.25f), new ScoreDoc(5, 1.6f) },
+            "field",
+            new float[] { 1.0f, 2.0f }
+        );
         String expected = """
             {
               "knn_score_doc" : {
@@ -65,6 +87,11 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
                     "doc" : 5,
                     "score" : 1.6
                   }
+                ],
+                "field" : "field",
+                "query" : [
+                  1.0,
+                  2.0
                 ]
               }
             }""";
@@ -85,7 +112,7 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
         try (Directory directory = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), directory)) {
             iw.addDocument(new Document());
             try (IndexReader reader = iw.getReader()) {
-                SearchExecutionContext context = createSearchExecutionContext(new IndexSearcher(reader));
+                SearchExecutionContext context = createSearchExecutionContext(newSearcher(reader));
                 KnnScoreDocQueryBuilder queryBuilder = createTestQueryBuilder();
                 Query query = queryBuilder.doToQuery(context);
 
@@ -107,7 +134,7 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
         try (Directory directory = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), directory)) {
             iw.addDocument(new Document());
             try (IndexReader reader = iw.getReader()) {
-                SearchExecutionContext context = createSearchExecutionContext(new IndexSearcher(reader));
+                SearchExecutionContext context = createSearchExecutionContext(newSearcher(reader));
                 KnnScoreDocQueryBuilder queryBuilder = createTestQueryBuilder();
                 QueryBuilder rewriteQuery = rewriteQuery(queryBuilder, new SearchExecutionContext(context));
                 assertNotNull(rewriteQuery.toQuery(context));
@@ -124,7 +151,7 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
         try (Directory directory = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), directory)) {
             iw.addDocument(new Document());
             try (IndexReader reader = iw.getReader()) {
-                SearchExecutionContext context = createSearchExecutionContext(new IndexSearcher(reader));
+                SearchExecutionContext context = createSearchExecutionContext(newSearcher(reader));
                 context.setAllowUnmappedFields(true);
                 KnnScoreDocQueryBuilder queryBuilder = createTestQueryBuilder();
                 queryBuilder.toQuery(context);
@@ -133,9 +160,34 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
     }
 
     public void testRewriteToMatchNone() throws IOException {
-        KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(new ScoreDoc[0]);
-        SearchExecutionContext context = createSearchExecutionContext();
+        KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(
+            new ScoreDoc[0],
+            randomBoolean() ? "field" : null,
+            randomBoolean() ? randomVector(10) : null
+        );
+        QueryRewriteContext context = randomBoolean()
+            ? new InnerHitsRewriteContext(createSearchExecutionContext().getParserConfig(), System::currentTimeMillis)
+            : createSearchExecutionContext();
         assertEquals(new MatchNoneQueryBuilder(), queryBuilder.rewrite(context));
+    }
+
+    public void testRewriteForInnerHits() throws IOException {
+        SearchExecutionContext context = createSearchExecutionContext();
+        InnerHitsRewriteContext innerHitsRewriteContext = new InnerHitsRewriteContext(context.getParserConfig(), System::currentTimeMillis);
+        KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(
+            new ScoreDoc[] { new ScoreDoc(0, 4.25f), new ScoreDoc(5, 1.6f) },
+            randomAlphaOfLength(10),
+            randomVector(10)
+        );
+        queryBuilder.boost(randomFloat());
+        queryBuilder.queryName(randomAlphaOfLength(10));
+        QueryBuilder rewritten = queryBuilder.rewrite(innerHitsRewriteContext);
+        assertTrue(rewritten instanceof ExactKnnQueryBuilder);
+        ExactKnnQueryBuilder exactKnnQueryBuilder = (ExactKnnQueryBuilder) rewritten;
+        assertEquals(queryBuilder.queryVector(), exactKnnQueryBuilder.getQuery());
+        assertEquals(queryBuilder.fieldName(), exactKnnQueryBuilder.getField());
+        assertEquals(queryBuilder.boost(), exactKnnQueryBuilder.boost(), 0.0001f);
+        assertEquals(queryBuilder.queryName(), exactKnnQueryBuilder.queryName());
     }
 
     @Override
@@ -153,6 +205,48 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
         // Test isn't relevant, since query is never parsed from xContent
     }
 
+    public void testScoreDocQueryWeightCount() throws IOException {
+        try (Directory directory = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), directory)) {
+            for (int i = 0; i < 30; i++) {
+                Document doc = new Document();
+                doc.add(new StringField("field", "value" + i, Field.Store.NO));
+                iw.addDocument(doc);
+                if (i % 10 == 0) {
+                    iw.flush();
+                }
+            }
+            try (IndexReader reader = iw.getReader()) {
+                IndexSearcher searcher = newSearcher(reader);
+                SearchExecutionContext context = createSearchExecutionContext(searcher);
+
+                List<ScoreDoc> scoreDocsList = new ArrayList<>();
+                for (int doc = 0; doc < 10; doc++) {
+                    ScoreDoc scoreDoc = new ScoreDoc(doc, randomFloat());
+                    scoreDocsList.add(scoreDoc);
+                }
+                ScoreDoc[] scoreDocs = scoreDocsList.toArray(new ScoreDoc[0]);
+
+                KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(scoreDocs, "field", randomVector(10));
+                Query query = queryBuilder.doToQuery(context);
+                final Weight w = query.createWeight(searcher, ScoreMode.TOP_SCORES, 1.0f);
+                for (LeafReaderContext leafReaderContext : searcher.getLeafContexts()) {
+                    int count = w.count(leafReaderContext);
+                    final Scorer scorer = w.scorer(leafReaderContext);
+                    if (count > 0) {
+                        assertThat(scorer, is(notNullValue()));
+                        int iteratorCount = 0;
+                        while (scorer.iterator().nextDoc() != NO_MORE_DOCS) {
+                            iteratorCount++;
+                        }
+                        assertThat(count, equalTo(iteratorCount));
+                    } else {
+                        assertThat(scorer, is(nullValue()));
+                    }
+                }
+            }
+        }
+    }
+
     public void testScoreDocQuery() throws IOException {
         try (Directory directory = newDirectory(); RandomIndexWriter iw = new RandomIndexWriter(random(), directory)) {
             for (int i = 0; i < 50; i++) {
@@ -165,7 +259,7 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
             }
 
             try (IndexReader reader = iw.getReader()) {
-                IndexSearcher searcher = new IndexSearcher(reader);
+                IndexSearcher searcher = newSearcher(reader);
                 SearchExecutionContext context = createSearchExecutionContext(searcher);
 
                 List<ScoreDoc> scoreDocsList = new ArrayList<>();
@@ -175,8 +269,9 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
                 }
                 ScoreDoc[] scoreDocs = scoreDocsList.toArray(new ScoreDoc[0]);
 
-                KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(scoreDocs);
-                Query query = queryBuilder.doToQuery(context);
+                KnnScoreDocQueryBuilder queryBuilder = new KnnScoreDocQueryBuilder(scoreDocs, "field", randomVector(10));
+                final Query query = queryBuilder.doToQuery(context);
+                final Weight w = query.createWeight(searcher, ScoreMode.TOP_SCORES, 1.0f);
 
                 TopDocs topDocs = searcher.search(query, 100);
                 assertEquals(scoreDocs.length, topDocs.totalHits.value);
@@ -187,7 +282,15 @@ public class KnnScoreDocQueryBuilderTests extends AbstractQueryTestCase<KnnScore
                 for (int i = 0; i < scoreDocs.length; i++) {
                     assertEquals(scoreDocs[i].doc, topDocs.scoreDocs[i].doc);
                     assertEquals(scoreDocs[i].score, topDocs.scoreDocs[i].score, 0.0001f);
+                    assertTrue(searcher.explain(query, scoreDocs[i].doc).isMatch());
+                }
 
+                for (LeafReaderContext leafReaderContext : searcher.getLeafContexts()) {
+                    Scorer scorer = w.scorer(leafReaderContext);
+                    // If we have matching docs, the score should always be greater than 0 for that segment
+                    if (scorer != null) {
+                        assertThat(leafReaderContext.toString(), scorer.getMaxScore(NO_MORE_DOCS), greaterThan(0.0f));
+                    }
                 }
             }
         }
